# app/plugins/AuthenticationApi/src/Controller/LoginController.php
@@ -2,6 +2,7 @@
 
 namespace AuthenticationApi\Controller;
 
+use Authentication\Authenticator\UnauthenticatedException;
 use Authentication\Controller\Component\AuthenticationComponent;
 use AuthenticationApi\Dto\UserLoginRequest;
 use AuthenticationApi\Service\UserAuthenticationService;
@@ -12,12 +13,12 @@ use SwaggerBake\Lib\Attribute\OpenApiResponse;
 /**
  * @property AuthenticationComponent $Authentication
  */
-class AuthenticationController extends AppController
+class LoginController extends AppController
 {
     public function beforeFilter(EventInterface $event)
     {
         parent::beforeFilter($event); // TODO: Change the autogenerated stub
-        $this->Authentication->allowUnauthenticated(['user']);
+        $this->Authentication->allowUnauthenticated(['login']);
     }
 
     /**
@@ -30,8 +31,12 @@ class AuthenticationController extends AppController
      */
     #[OpenApiDto(class: UserLoginRequest::class)]
     #[OpenApiResponse(mimeTypes: ['text/plain'])]
-    public function user(UserAuthenticationService $service)
+    public function login(UserAuthenticationService $service)
     {
-        return $this->response->withStringBody($service->auth($this));
+        try {
+            return $this->response->withStringBody($service->auth($this));
+        } catch (UnauthenticatedException $e) {
+            return $this->response->withStringBody($e->getMessage())->withStatus(401);
+        }
     }
 }
